# sunday

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  README.md  cookies.txt  docker-compose.dev.yml  docker-compose.yml  docker.just  justfile  openapi.yaml  private.just
assets/: app.css  deepchat.js  htmx-reload.js  htmxListener.js  theme-switcher.js  themes.css  tw.js
migrations/: 20260103000000_setup_pgvector.sql
src/: admin_guard.rs  api_key_middleware.rs  authentication.rs  config.rs  documents.rs  main.rs  migrations.rs  models.rs  oidc.rs  tenant.rs  tenant_middleware.rs  text_utils.rs  theme_service.rs  user.rs
src/chat/: handler.rs  mod.rs
src/db/: mod.rs  session.rs  theme.rs  user.rs
src/migrations/: 001_initial_schema.sql  002_themes.sql  003_make_year_required.sql  003_remove_passwords.sql  mod.rs
src/routes/: admin.rs  assets.rs  auth.rs  chat.rs  mod.rs  technical.rs  tenants.rs  user.rs
src/routes/admin/: dashboard.rs  mod.rs  users.rs
src/view/: about.rs  admin.rs  icons.rs  mod.rs  navbar.rs  user.rs
src/view/admin/: dashboard.rs  users.rs
src/view/auth/: login_form.rs  mod.rs
test_ui/: app.js  index.html  style.css
tests/: auth.hurl  chat.hurl  health.hurl  hurl.just  variables
tests/manual/: README.md  chat_history.hurl  rag.hurl
