[package]
name = "sunday"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "sunday"
path = "src/main.rs"

[dependencies]
# Web framework
actix-web = "4.12"
actix-session = { version = "0.10", features = ["cookie-session"] }
actix-multipart = "0.7"
actix-files = "0.6"

# Async runtime
tokio = { version = "1.48", features = ["full"] }

# Database
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-uuid-1"] }
sea-query = "0.31"
postgres-openssl = "0.5"
openssl = "0.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Password hashing
argon2 = "0.5"

# Utilities
uuid = { version = "1.19", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.12"
validator = { version = "0.18", features = ["derive"] }
urlencoding = "2.1"
lazy_static = "1.5"

# HTTP client (for OIDC)
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
base64 = "0.22"
sha2 = "0.10"
rand = "0.8"
url = "2.5"

# JWT handling
jsonwebtoken = "9.3"

# Logging
env_logger = "0.11"
log = "0.4"

# Templating
maud = { version = "0.26", features = ["actix-web"] }

# Markdown processing
markdown = "1.0"

# Future utilities
futures-util = "0.3"
