[package]
name = "sunday"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "sunday"
path = "src/main.rs"

[dependencies]
# Web framework
actix-web = "4.12"

# Async runtime
tokio = { version = "1.48", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
uuid = { version = "1.19", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.12"
validator = { version = "0.18", features = ["derive"] }
lazy_static = "1.5"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
url = "2.5"

# Logging
env_logger = "0.11"
log = "0.4"

# Future utilities
futures-util = "0.3"
