[package]
name = "sunday"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "sunday"
path = "src/main.rs"

[dependencies]
# Web framework
actix-web = "4.12"
actix-multipart = "0.7"
actix-cors = "0.7"

# Async runtime - minimal features for actix-web
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }

# PDF processing
pdf-extract = "0.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
env_logger = "0.11"
log = "0.4"

# Future utilities - for async middleware
futures-util = { version = "0.3", default-features = false }

# LLM
rig-core = "0.27.0"
rig-postgres = "0.1.0"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "macros", "migrate", "uuid"] }
pgvector = { version = "0.4", features = ["sqlx"] }
uuid = { version = "1.11", features = ["serde", "v4"] }
